# ArtificialLife

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  imgui.ini
.claude/: settings.local.json
include/: BoidRenderer.h  Engine.h  Time.h  UI.h
include/AudioCPPN/: AudioBands.h  AudioCPPN.h  SimpleMLP.h
include/Boids/: Boid.h  BoidRenderer.h
include/Core/: Application.h  Debug.h  GUI.h  Input.h  Recorder.h  SpatialGrid.h  Time.h
include/ParticleKNN/: ParticleKNN.h  ParticleKNNSystem.h
include/ParticleLife/: Cluster.h  ParticleLife.h  ParticleLifeSystem.h
src/: BoidApplication.cpp  ParticleKNNApplication.cpp  ParticleLifeApplication.cpp  main.cpp  mainCubeTest.cpp.bak
src/AudioCPPN/: AudioBands.cpp  AudioCPPN.cpp  SimpleMLP.cpp
src/Core/: Application.cpp  GUI.cpp  Input.cpp  Recorder.cpp  Time.cpp
